# read2rich

./: .gitignore  2_MINUTE_DEMO_VIDEO_SCRIPT.md  ADMIN_SYSTEM_GUIDE.md  ADVANCED_PROMPT_OPTIMIZATION_SYSTEM.md  AI_ANXIETY_ACTION_GUIDE.md  AI_APPS_AUTO_CRAWLER_UPDATE.md  AI_APPS_CRAWLER_SUMMARY.md  AI_APPS_DATA_SOURCES_ANALYSIS.md  AI_CONVERSATION_FLOW_FIX.md  AI_EXPERT_UPGRADE.md  AI_RANKING_SYSTEM_UPDATE.md  AI_SPEED_OPTIMIZATION.md  API_PERFORMANCE_OPTIMIZATION.md  AUTH_TEST_GUIDE.md  BUSINESS_PLAN_TEMPLATE.md  CASE_PAGES_HTML_FIX.md  CHAT_WELCOME_OPTIMIZATION.md  CLOUD_DEPLOYMENT_GUIDE.md  COMPLETE_DOCUMENT_GENERATION_GUIDE.md  COMPLETE_UX_OPTIMIZATION.md  CONVERSATION_FLOW_DIAGNOSIS.md  CORS_SOLUTION_GUIDE.md  COURSE_IMPLEMENTATION_GUIDE.md  COURSE_MANAGEMENT_SUMMARY.md  COURSE_MARKETING_STRATEGY.md  CRAWLED_PROMPTS_INTEGRATION_GUIDE.md  DEEPNEED_BUSINESS_MODEL.md  DEEPNEED_MARKETING_OPTIMIZATION.md  DEEPNEED_PPT_OPTIMIZATION_GUIDE.md  DEMO_SCRIPT.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT_SUMMARY.md  DOCKER_DEV_STATUS.md  DOCKER_FIX_SUMMARY.md  DOCKER_QUICK_REFERENCE.md  EXISTING_NGINX_DEPLOYMENT_GUIDE.md  FEATURE_COMPARISON.md  FINAL_FONT_FIX_SUMMARY.md  (+127 more)
apps/api/: Dockerfile  init_db.py  pyproject.toml  server.py  simple_server.py  start_dev.py  test_server.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: auth.py  config.py
apps/api/app/db/: database.py  models.py
apps/api/app/routers/: auth.py  courses.py  generation.py  instructors.py  payment.py  payments.py  prompts.py  reports.py  sessions.py  (+1 more)
(+330 files in other folders)
